--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,13 @@
 }
 
 body {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(3, 1fr);
     min-height: 100vh;
     background-color: #212121;
     padding: 0 10%;
+    gap: 15px;
 }
 
 .container {
@@ -26,6 +27,16 @@ body {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+.clock-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 15px;
+    height: fit-content;
+    padding: 30px 0;
 }
 
 .clock {
@@ -99,4 +110,19 @@ body {
 
 input {
     color: black;
+    text-transform: capitalize;
+}
+
+@media screen and (max-width: 1000px) {
+    body {
+        grid-template-columns: 1fr;
+    }
+
+    .clock-wrapper:first-child {
+        margin-top: 50px;
+    }
+
+    .clock-wrapper {
+        gap: 20px;
+    }
 }
