--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,13 @@ body {
 }
 
 .search-bar {
-    width: 80%;
+    width: 75%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff80;
+    background-color: transparent;
     border-radius: 5px;
+    text-transform: capitalize;
 }
 
 .clock-wrapper {
@@ -106,11 +108,6 @@ body {
 .location {
     font-size: 18px;
     color: #ccc;
-}
-
-input {
-    color: black;
-    text-transform: capitalize;
 }
 
 @media screen and (max-width: 1000px) {
