--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,19 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    color: #ffffff;
+    color: var(--white);
+}
+
+
+:root {
+    --white: white;
+    --background-color:#212121;
+    --border:#ffffff80;
+    --red:#ff3d58;
+    --clock-color:#222;
+    --clock-border-color:#ffffff40;
+    --box-shadow:#ffffff4d;
+    
 }
 
 body {
@@ -11,7 +23,11 @@ body {
     place-items: center;
     grid-template-columns: repeat(3, 1fr);
     min-height: 100vh;
-    background-color: #212121;
+    background-image: url(../assets/backgoundimg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     padding: 0 10%;
     gap: 15px;
 }
@@ -25,8 +41,8 @@ body {
     width: 75%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ffffff80;
-    background-color: transparent;
+    border: 1px solid var(--border);
+    background-color: var(--clock-color);
     border-radius: 5px;
     text-transform: capitalize;
 }
@@ -45,9 +61,8 @@ body {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 2px solid rgba(255, 255, 255, 0.25);
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.9);
+    background-color: var(--clock-color);
+    box-shadow: 0px 0px 30px var(--box-shadow);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,7 +88,7 @@ body {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: var(--white);
     z-index: 2;
 }
 
@@ -91,23 +106,23 @@ body {
 }
 
 .hour-hand i {
-    background-color: #ffffff80;
+    background-color: var(--border);
     height: 70px;
 }
 
 .minute-hand i {
-    background-color: #ffffff;
+    background-color: var(--white);
     height: 100px;
 }
 
 .second-hand i {
-    background-color: #ff3d58;
+    background-color: var(--red);
     height: 94px;
 }
 
 .location {
     font-size: 18px;
-    color: #ccc;
+    color: var(--border);
 }
 
 @media screen and (max-width: 1000px) {
