--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    padding: 0 10%;
+    padding: 50px 10%;
     gap: 15px;
 }
 
@@ -114,7 +114,7 @@ body {
 }
 
 .toptext {
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     font-size: 0.8rem;
@@ -204,6 +204,47 @@ body {
     bottom: 60px;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.action-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    z-index: 1000;
+    background-color: var(--clock-color);
+    color: var(--background-color);
+    border: none;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.action-button i {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.4rem;
+}
+
+#add-clock {
+    border-radius: 50%;
+    right: 40px;
+    top: 50%;
+    transform: translate(0, -50%);
+    width: 50px;
+    height: 50px;
+}
+
+#remove-clock {
+    border-radius: 50%;
+    left: 40px;
+    top: 50%;
+    transform: translate(0, -50%);
+    width: 50px;
+    height: 50px;
 }
 
 @media screen and (max-width: 1000px) {
