--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ body {
     height: 50px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
     body {
         grid-template-columns: 1fr;
         padding: 0 10%;
@@ -265,5 +265,10 @@ body {
     .clock-wrapper {
         gap: 20px;
         height: 100vh;
+    }
+
+    #remove-clock,
+    #add-clock {
+        top: 15%;
     }
 }
